# Simple-LLm-chatbot

./: .gitignore  README.md  pyproject.toml  qachatbot.py  requirements.txt  testwebook.py
lang_chaninbasic/: langchanin.ipynb
